[FIX] helpdesk: fix kanban group column size
Before this commit, the group columns in helpesk
overview overlapped each others.
This commit fixes the column's width to prevent them to
overlap.

task id: 3129146

closes odoo/enterprise#38320

--- a/helpdesk/static/src/scss/helpdesk.scss
+++ b/helpdesk/static/src/scss/helpdesk.scss
@@ -1,6 +1,6 @@
 @include media-breakpoint-up(md) {
-    .o_helpdesk_view .o_kanban_record {
-        min-width: map-get($grid-breakpoints, 'xl') * 0.35;
+    .o_helpdesk_view.o_helpdesk_kanban {
+        --KanbanGroup-width: #{map-get($grid-breakpoints, 'xl') * 0.35};
     }
 }
 
